# Godzilla

./: .gitignore  Dockerfile  README.md  docker-compose-development.yml  docker-compose.yml  manage.py  pyproject.toml  task.md
Godzilla/: asgi.py  settings.py  urls.py  wsgi.py
core/: constants.py  models.py  serializers.py  service.py  urls.py  views.py
core/migrations/: 0001_initial.py
